@@ -23,12 +23,17 @@ javafx {
 }
 
 dependencies {
+    implementation("org.mindrot:jbcrypt:0.4")
     testImplementation(platform("org.junit:junit-bom:5.10.0"))
     testImplementation("org.junit.jupiter:junit-jupiter")
     implementation("org.postgresql:postgresql:42.7.7")
     implementation("org.flywaydb:flyway-core:10.17.0")
     implementation("org.flywaydb:flyway-database-postgresql:10.17.0")
     implementation("org.apache.poi:poi-ooxml:5.2.3")
+    implementation("org.slf4j:slf4j-api:2.0.7")
+    implementation("ch.qos.logback:logback-classic:1.4.11")
+    implementation ("org.kordamp.ikonli:ikonli-javafx:12.3.1")
+    implementation ("org.kordamp.ikonli:ikonli-fontawesome5-pack:12.3.1")
 }
 
 tasks.test {
@@ -42,3 +47,8 @@ application {
 tasks.withType<JavaCompile> {
     options.encoding = "UTF-8"
 }
+
+tasks.named<JavaExec>("run") {
+    jvmArgs = listOf("--enable-native-access=javafx.graphics")
+}
+
